@@ -125,4 +125,11 @@ $CITY0 can no longer work on $IMPROVEMENT1 because we are already receiving its 
 Zoom to City.
 Sounds Good.
 
+#C3X_CONFIRM_DEBUG_ACTIVATION
+Activate debug mode?
+#itemlist
+Yes
+No
+#active 1
+
 # ; This line must remain at end of file
