@@ -137,6 +137,10 @@ show_territory_colors_on_water_tiles_in_minimap = false
 ; MILITARYALLIANCEAGAINSTUS, and SUMMARY_TRAVELERS_REPORT.
 convert_some_popups_into_online_mp_messages = true
 
+; If enabled, pressing the keys d e b u g to type "debug", in-game will allow you to activate debug mode for a game in progress. Typing that with
+; debug mode already on will deactivate it.
+enable_debug_mode_switch = true
+
 [====================]
 [=== OPTIMIZATION ===]
 [====================]
